[package]
name = "gpionext-config"
version = "0.1.0"
edition = "2021"
description = "GPIOnext interactive configuration tool — terminal UI, no Python required"
license = "MIT"

[[bin]]
name = "gpionext-config"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
