[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gpionext_core"
# Version is inherited from Cargo.toml via maturin
dynamic = ["version"]
# Minimum Python that ships with Pi OS Bullseye (Pi 2B target)
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
# Module name as imported in Python: import gpionext_core
module-name = "gpionext_core"
features = ["i2c"]
